Adding location generation code for map service. Changed WHAT_IS_OUR_GOAL to WHAT_IS_COMING